# nvc

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel
bazel/: bootstrap.bash
test/: test_simp.c
